// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Select [getSelectedOptions] should return the selected options or the placeholder if given 1`] = `
<Select
  multiple={true}
  options={
    Array [
      Object {
        "text": "React.js",
        "value": "React.js",
      },
      Object {
        "text": "Vue.js",
        "value": "Vue.js",
      },
      Object {
        "text": "Angular.js",
        "value": "Angular.js",
      },
      Object {
        "text": "jQuery",
        "value": "jQuery",
      },
      Object {
        "text": "Knockout",
        "value": "Knockout",
      },
      Object {
        "text": "Backbone",
        "value": "Backbone",
      },
      Object {
        "text": "Ember",
        "value": "Ember",
      },
      Object {
        "text": "Bootstrap",
        "value": "Bootstrap",
      },
      Object {
        "text": "Other",
        "value": "Other",
      },
    ]
  }
  placeholder="my-placeholder"
  selected={Array []}
  size="medium"
>
  <OutsideClickable
    onOutsideClick={[Function]}
  >
    <div
      className="undefined"
      onClick={[Function]}
    >
      <div
        className=""
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={0}
      >
        <div
          className=""
        >
          <Option
            key="null"
            multiple={true}
            selected={false}
            text="my-placeholder"
            value={null}
          >
            <div
              className="undefined"
              key="null"
              onClick={[Function]}
            >
              <span>
                my-placeholder
              </span>
              <span
                className="ico ico-close undefined"
              />
              <span
                className="ico ico-tick undefined"
              />
            </div>
          </Option>
        </div>
        <div
          className=""
        >
          <Option
            highlighted={false}
            key="opt-React.js"
            multiple={true}
            onClick={[Function]}
            selected={false}
            text="React.js"
            value="React.js"
          >
            <div
              className=""
              key="React.js"
              onClick={[Function]}
            >
              <span>
                React.js
              </span>
              <span
                className="ico ico-close undefined"
              />
              <span
                className="ico ico-tick undefined"
              />
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Vue.js"
            multiple={true}
            onClick={[Function]}
            selected={false}
            text="Vue.js"
            value="Vue.js"
          >
            <div
              className=""
              key="Vue.js"
              onClick={[Function]}
            >
              <span>
                Vue.js
              </span>
              <span
                className="ico ico-close undefined"
              />
              <span
                className="ico ico-tick undefined"
              />
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Angular.js"
            multiple={true}
            onClick={[Function]}
            selected={false}
            text="Angular.js"
            value="Angular.js"
          >
            <div
              className=""
              key="Angular.js"
              onClick={[Function]}
            >
              <span>
                Angular.js
              </span>
              <span
                className="ico ico-close undefined"
              />
              <span
                className="ico ico-tick undefined"
              />
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-jQuery"
            multiple={true}
            onClick={[Function]}
            selected={false}
            text="jQuery"
            value="jQuery"
          >
            <div
              className=""
              key="jQuery"
              onClick={[Function]}
            >
              <span>
                jQuery
              </span>
              <span
                className="ico ico-close undefined"
              />
              <span
                className="ico ico-tick undefined"
              />
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Knockout"
            multiple={true}
            onClick={[Function]}
            selected={false}
            text="Knockout"
            value="Knockout"
          >
            <div
              className=""
              key="Knockout"
              onClick={[Function]}
            >
              <span>
                Knockout
              </span>
              <span
                className="ico ico-close undefined"
              />
              <span
                className="ico ico-tick undefined"
              />
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Backbone"
            multiple={true}
            onClick={[Function]}
            selected={false}
            text="Backbone"
            value="Backbone"
          >
            <div
              className=""
              key="Backbone"
              onClick={[Function]}
            >
              <span>
                Backbone
              </span>
              <span
                className="ico ico-close undefined"
              />
              <span
                className="ico ico-tick undefined"
              />
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Ember"
            multiple={true}
            onClick={[Function]}
            selected={false}
            text="Ember"
            value="Ember"
          >
            <div
              className=""
              key="Ember"
              onClick={[Function]}
            >
              <span>
                Ember
              </span>
              <span
                className="ico ico-close undefined"
              />
              <span
                className="ico ico-tick undefined"
              />
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Bootstrap"
            multiple={true}
            onClick={[Function]}
            selected={false}
            text="Bootstrap"
            value="Bootstrap"
          >
            <div
              className=""
              key="Bootstrap"
              onClick={[Function]}
            >
              <span>
                Bootstrap
              </span>
              <span
                className="ico ico-close undefined"
              />
              <span
                className="ico ico-tick undefined"
              />
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Other"
            multiple={true}
            onClick={[Function]}
            selected={false}
            text="Other"
            value="Other"
          >
            <div
              className=""
              key="Other"
              onClick={[Function]}
            >
              <span>
                Other
              </span>
              <span
                className="ico ico-close undefined"
              />
              <span
                className="ico ico-tick undefined"
              />
            </div>
          </Option>
        </div>
        <input
          type="hidden"
          value=""
        />
      </div>
    </div>
  </OutsideClickable>
</Select>
`;

exports[`(Component) Select [snapshot] should match 1`] = `
<Select
  multiple={false}
  options={
    Array [
      Object {
        "text": "React.js",
        "value": "React.js",
      },
      Object {
        "text": "Vue.js",
        "value": "Vue.js",
      },
      Object {
        "text": "Angular.js",
        "value": "Angular.js",
      },
      Object {
        "text": "jQuery",
        "value": "jQuery",
      },
      Object {
        "text": "Knockout",
        "value": "Knockout",
      },
      Object {
        "text": "Backbone",
        "value": "Backbone",
      },
      Object {
        "text": "Ember",
        "value": "Ember",
      },
      Object {
        "text": "Bootstrap",
        "value": "Bootstrap",
      },
      Object {
        "text": "Other",
        "value": "Other",
      },
    ]
  }
  selected={
    Array [
      "jQuery",
    ]
  }
  size="medium"
>
  <OutsideClickable
    onOutsideClick={[Function]}
  >
    <div
      className=""
      onClick={[Function]}
    >
      <div
        className=""
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={0}
      >
        <div
          className=""
        >
          <Option
            key="jQuery"
            multiple={false}
            selected={false}
            text="jQuery"
            value="jQuery"
          >
            <div
              className=""
              key="jQuery"
              onClick={[Function]}
            >
              <span>
                jQuery
              </span>
            </div>
          </Option>
        </div>
        <div
          className=""
        >
          <Option
            highlighted={false}
            key="opt-React.js"
            multiple={false}
            onClick={[Function]}
            selected={false}
            text="React.js"
            value="React.js"
          >
            <div
              className=""
              key="React.js"
              onClick={[Function]}
            >
              <span>
                React.js
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Vue.js"
            multiple={false}
            onClick={[Function]}
            selected={false}
            text="Vue.js"
            value="Vue.js"
          >
            <div
              className=""
              key="Vue.js"
              onClick={[Function]}
            >
              <span>
                Vue.js
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Angular.js"
            multiple={false}
            onClick={[Function]}
            selected={false}
            text="Angular.js"
            value="Angular.js"
          >
            <div
              className=""
              key="Angular.js"
              onClick={[Function]}
            >
              <span>
                Angular.js
              </span>
            </div>
          </Option>
          <Option
            highlighted={true}
            key="opt-jQuery"
            multiple={false}
            onClick={[Function]}
            selected={true}
            text="jQuery"
            value="jQuery"
          >
            <div
              className=""
              key="jQuery"
              onClick={[Function]}
            >
              <span>
                jQuery
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Knockout"
            multiple={false}
            onClick={[Function]}
            selected={false}
            text="Knockout"
            value="Knockout"
          >
            <div
              className=""
              key="Knockout"
              onClick={[Function]}
            >
              <span>
                Knockout
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Backbone"
            multiple={false}
            onClick={[Function]}
            selected={false}
            text="Backbone"
            value="Backbone"
          >
            <div
              className=""
              key="Backbone"
              onClick={[Function]}
            >
              <span>
                Backbone
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Ember"
            multiple={false}
            onClick={[Function]}
            selected={false}
            text="Ember"
            value="Ember"
          >
            <div
              className=""
              key="Ember"
              onClick={[Function]}
            >
              <span>
                Ember
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Bootstrap"
            multiple={false}
            onClick={[Function]}
            selected={false}
            text="Bootstrap"
            value="Bootstrap"
          >
            <div
              className=""
              key="Bootstrap"
              onClick={[Function]}
            >
              <span>
                Bootstrap
              </span>
            </div>
          </Option>
          <Option
            highlighted={false}
            key="opt-Other"
            multiple={false}
            onClick={[Function]}
            selected={false}
            text="Other"
            value="Other"
          >
            <div
              className=""
              key="Other"
              onClick={[Function]}
            >
              <span>
                Other
              </span>
            </div>
          </Option>
        </div>
        <input
          type="hidden"
          value="jQuery"
        />
      </div>
    </div>
  </OutsideClickable>
</Select>
`;
